--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,14 @@
-
 {
   "name": "pet-adoption-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^7.6.0"
+    "body-parser": "^1.20.3",
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
+    "mongoose": "^7.8.7"
   }
-
 }
